--- a/conf/application.conf
+++ b/conf/application.conf
@@ -17,9 +17,9 @@
 
 include "backend.conf"
 
-appName = mtd-api
+appName = business-details-api
 
-appUrl = "http://localhost:#port#"
+appUrl = "http://localhost:7792"
 
 # Session Timeout
 # ~~~~
