--- a/conf/application.conf
+++ b/conf/application.conf
@@ -113,6 +113,8 @@ api {
   gateway.context = "individuals/business/details"
 }
 
+current-environment = "sandbox"
+
 httpHeadersWhitelist = [ "Accept", "Gov-Test-Scenario", "Content-Type", "Location", "X-Request-Timestamp", "X-Session-Id" ]
 internalServiceHostPatterns = [ "localhost" ]
 
