--- a/conf/application.conf
+++ b/conf/application.conf
@@ -109,6 +109,11 @@ api {
     status = "ALPHA"
     endpoints.enabled = false
   }
+
+  confidence-level-check {
+    enabled = true
+  }
+
   # The context which the API will have via the API Platform http://API_GATEWAY/{api.gateway.context}/
   gateway.context = "individuals/business/details"
 }
