[MTDSA-8224] different feature switch for definition and auth service

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -111,7 +111,8 @@ api {
   }
 
   confidence-level-check {
-    enabled = true
+    definition.enabled = true
+    auth-validation.enabled = true
   }
 
   # The context which the API will have via the API Platform http://API_GATEWAY/{api.gateway.context}/
