--- a/conf/application.conf
+++ b/conf/application.conf
@@ -119,7 +119,7 @@ api {
   gateway.context = "individuals/business/details"
 }
 
-httpHeadersWhitelist = [ "Accept", "Gov-Test-Scenario", "Content-Type", "Location", "X-Request-Timestamp", "X-Session-Id" ]
+bootstrap.http.headersAllowlist = [ "Accept", "Gov-Test-Scenario", "Content-Type", "Location", "X-Request-Timestamp", "X-Session-Id" ]
 internalServiceHostPatterns = [ "localhost" ]
 
 # Metrics plugin settings - graphite reporting is configured on a per env basis
