--- a/conf/application.conf
+++ b/conf/application.conf
@@ -71,8 +71,7 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuditModule"
 play.modules.enabled += "uk.gov.hmrc.play.bootstrap.graphite.GraphiteMetricsModule"
 
 # Provides an implementation and configures all filters required by a Platform backend microservice.
-play.modules.enabled += "uk.gov.hmrc.play.bootstrap.MicroserviceModule"
-play.http.filters = "uk.gov.hmrc.play.bootstrap.filters.MicroserviceFilters"
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.backend.BackendModule"
 
 # Json error handler
 play.http.errorHandler = "utils.ErrorHandler"
@@ -175,10 +174,11 @@ microservice {
     }
 
     des {
-      host = localhost
+      host = 127.0.0.1
       port = 9772
       env = Prod
       token = ABCD1234
+      environmentHeaders = ["Accept", "Gov-Test-Scenario", "Content-Type", "Location", "X-Request-Timestamp", "X-Session-Id"]
     }
   }
 }
