added http_x_request_id into application.conf

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -178,7 +178,7 @@ microservice {
       port = 9772
       env = Prod
       token = ABCD1234
-      environmentHeaders = ["Accept", "Gov-Test-Scenario", "Content-Type", "Location", "X-Request-Timestamp", "X-Session-Id"]
+      environmentHeaders = ["Accept", "Gov-Test-Scenario", "Content-Type", "Location", "X-Request-Timestamp", "X-Session-Id", "http_x_request_id"]
     }
   }
 }
