--- a/conf/application.conf
+++ b/conf/application.conf
@@ -178,7 +178,7 @@ microservice {
       port = 9772
       env = Prod
       token = ABCD1234
-      environmentHeaders = ["Accept", "Gov-Test-Scenario", "Content-Type", "Location", "X-Request-Timestamp", "X-Session-Id", "x-request-id"]
+      environmentHeaders = ["Accept", "Gov-Test-Scenario", "Content-Type", "Location", "X-Request-Timestamp", "X-Session-Id", "X-Request-Id"]
     }
   }
 }
