--- a/resources/public/api/conf/1.0/application.yaml
+++ b/resources/public/api/conf/1.0/application.yaml
@@ -129,8 +129,14 @@ components:
             write:self-assessment: Grant write access
             read:self-assessment: Grant read access
 
+tags:
+  - name: List All Businesses
+    description: List all details of a user's business income sources
+  - name: Retrieve Business Details
+    description: Retrieve additional information about the details of a user’s business
+
 paths:
   /individuals/business/details/{nino}/list:
-    $ref: "./list.yaml"
+    $ref: "./endpoints/list_business_details.yaml"
   /individuals/business/details/{nino}/{businessId}:
-    $ref: "./retrieve.yaml"
+    $ref: "./endpoints/retrieve_business_details.yaml"
