--- a/resources/public/api/conf/1.0/endpoints/list.yaml
+++ b/resources/public/api/conf/1.0/endpoints/list.yaml
@@ -14,11 +14,27 @@ description: |
       <tbody>
           <tr>
               <td><p>N/A - DEFAULT</p></td>
-              <td><p>Simulates success response.</p></td>
+              <td><p>Simulate a successful response with a self-employment business.</p></td>
           </tr>
           <tr>
-              <td><p>NOT_FOUND</p></td>
-              <td><p>Simulates the scenario where no data is found.</p></td>
+              <td><p>PROPERTY</p></td>
+              <td><p>Simulate a successful response with a uk-property business.</p></td>
+          </tr>
+          <tr>
+            <td><p>FOREIGN_PROPERTY</p></td>
+            <td><p>Simulate a successful response with a foreign-property business.</p></td>
+          </tr>
+          <tr>
+            <td><p>BUSINESS_AND_PROPERTY</p></td>
+            <td><p>Simulate a successful response with a self-employment, uk-property and foreign-property business.</p></td>
+          </tr>
+          <tr>
+            <td><p>UNSPECIFIED</p></td>
+            <td><p>Simulate a successful response with a property-unspecified business.</p></td>
+          </tr> 
+          <tr>
+            <td><p>NOT_FOUND</p></td>
+            <td><p>Simulates the scenario where no data is found.</p></td>
           </tr>
       </tbody>
   </table>
@@ -27,8 +43,8 @@ tags:
 
 parameters:
   - $ref: '../pathParameters.yaml#/components/parameters/nino'
-  - $ref: '../pathParameters.yaml#/components/parameters/businessId'
   - $ref: '../headers.yaml#/components/parameters/acceptJson'
+  - $ref: '../headers.yaml#/components/parameters/authorization'
   - $ref: '../headers.yaml#/components/parameters/testScenarioHeader'
 
 security:
