--- a/resources/public/api/conf/1.0/endpoints/list.yaml
+++ b/resources/public/api/conf/1.0/endpoints/list.yaml
@@ -1,98 +1,99 @@
-summary: List All Businesses Details
-description: |
-  This endpoint allows a developer to retrieve all details of a user's business income sources. The unique account reference (National Insurance number) must be provided.
-  
-  ### Test data
-  <p>Scenario simulations using <code>Gov-Test-Scenario</code> headers is only available in the sandbox environment.</p>
-  <table>
-      <thead>
-          <tr>
-              <th>Header Value (Gov-Test-Scenario)</th>
-              <th>Scenario</th>
-          </tr>
-      </thead>
-      <tbody>
-          <tr>
-              <td><p>N/A - DEFAULT</p></td>
-              <td><p>Simulate a successful response with a self-employment business.</p></td>
-          </tr>
-          <tr>
-              <td><p>PROPERTY</p></td>
-              <td><p>Simulate a successful response with a uk-property business.</p></td>
-          </tr>
-          <tr>
-            <td><p>FOREIGN_PROPERTY</p></td>
-            <td><p>Simulate a successful response with a foreign-property business.</p></td>
-          </tr>
-          <tr>
-            <td><p>BUSINESS_AND_PROPERTY</p></td>
-            <td><p>Simulate a successful response with a self-employment, uk-property and foreign-property business.</p></td>
-          </tr>
-          <tr>
-            <td><p>UNSPECIFIED</p></td>
-            <td><p>Simulate a successful response with a property-unspecified business.</p></td>
-          </tr> 
-          <tr>
-            <td><p>NOT_FOUND</p></td>
-            <td><p>Simulates the scenario where no data is found.</p></td>
-          </tr>
-      </tbody>
-  </table>
-tags:
-  - List All Businesses
+get:
+  summary: List All Businesses Details
+  description: |
+    This endpoint allows a developer to retrieve all details of a user's business income sources. The unique account reference (National Insurance number) must be provided.
+    
+    ### Test data
+    <p>Scenario simulations using <code>Gov-Test-Scenario</code> headers is only available in the sandbox environment.</p>
+    <table>
+        <thead>
+            <tr>
+                <th>Header Value (Gov-Test-Scenario)</th>
+                <th>Scenario</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td><p>N/A - DEFAULT</p></td>
+                <td><p>Simulate a successful response with a self-employment business.</p></td>
+            </tr>
+            <tr>
+                <td><p>PROPERTY</p></td>
+                <td><p>Simulate a successful response with a uk-property business.</p></td>
+            </tr>
+            <tr>
+              <td><p>FOREIGN_PROPERTY</p></td>
+              <td><p>Simulate a successful response with a foreign-property business.</p></td>
+            </tr>
+            <tr>
+              <td><p>BUSINESS_AND_PROPERTY</p></td>
+              <td><p>Simulate a successful response with a self-employment, uk-property and foreign-property business.</p></td>
+            </tr>
+            <tr>
+              <td><p>UNSPECIFIED</p></td>
+              <td><p>Simulate a successful response with a property-unspecified business.</p></td>
+            </tr> 
+            <tr>
+              <td><p>NOT_FOUND</p></td>
+              <td><p>Simulates the scenario where no data is found.</p></td>
+            </tr>
+        </tbody>
+    </table>
+  tags:
+    - List All Businesses
 
-parameters:
-  - $ref: '../pathParameters.yaml#/components/parameters/nino'
-  - $ref: '../headers.yaml#/components/parameters/acceptJson'
-  - $ref: '../headers.yaml#/components/parameters/authorization'
-  - $ref: '../headers.yaml#/components/parameters/testScenarioHeader'
+  parameters:
+    - $ref: '../pathParameters.yaml#/components/parameters/nino'
+    - $ref: '../headers.yaml#/components/parameters/acceptJson'
+    - $ref: '../headers.yaml#/components/parameters/authorization'
+    - $ref: '../headers.yaml#/components/parameters/testScenarioHeader'
 
-security:
-  - User-Restricted:
-      - read:self-assessment
+  security:
+    - User-Restricted:
+        - read:self-assessment
 
-responses:
-  "200":
-    description: Success
-    headers:
-      X-CorrelationId:
-        $ref: '../headers.yaml#/components/parameters/correlationId'
-    content:
-      application/json:
-        schema:
-          $ref: '../schemas/listAllbusinesses/list_all_businesses_response.json'
-        examples:
-          example-response:
-            description: Example Response
-            value:
-              $ref: '../examples/listAllBusinesses/list_all_businesses_response.json'
+  responses:
+    "200":
+      description: Success
+      headers:
+        X-CorrelationId:
+          $ref: '../headers.yaml#/components/parameters/correlationId'
+      content:
+        application/json:
+          schema:
+            $ref: '../schemas/listAllbusinesses/list_all_businesses_response.json'
+          examples:
+            example-response:
+              description: Example Response
+              value:
+                $ref: '../examples/listAllBusinesses/list_all_businesses_response.json'
 
-  "400":
-    description: Bad request
-    content:
-      application/json:
-        schema:
-          $ref: '../schemas/error-response.yaml'
-        examples:
-          FORMAT_NINO:
-            $ref: '../errors.yaml#/components/examples/formatNino'
+    "400":
+      description: Bad request
+      content:
+        application/json:
+          schema:
+            $ref: '../schemas/error-response.yaml'
+          examples:
+            FORMAT_NINO:
+              $ref: '../errors.yaml#/components/examples/formatNino'
 
-  "403":
-    description: Forbidden
-    content:
-      application/json:
-        schema:
-          $ref: '../schemas/error-response.yaml'
-        examples:
-          CLIENT_OR_AGENT_NOT_AUTHORISED:
-            $ref: '../errors.yaml#/components/examples/clientOrAgentNotAuthorised'
+    "403":
+      description: Forbidden
+      content:
+        application/json:
+          schema:
+            $ref: '../schemas/error-response.yaml'
+          examples:
+            CLIENT_OR_AGENT_NOT_AUTHORISED:
+              $ref: '../errors.yaml#/components/examples/clientOrAgentNotAuthorised'
 
-  "404":
-    description: Not Found
-    content:
-      application/json:
-        schema:
-          $ref: '../schemas/error-response.yaml'
-        examples:
-          MATCHING_RESOURCE_NOT_FOUND:
-            $ref: '../errors.yaml#/components/examples/notFound'
+    "404":
+      description: Not Found
+      content:
+        application/json:
+          schema:
+            $ref: '../schemas/error-response.yaml'
+          examples:
+            MATCHING_RESOURCE_NOT_FOUND:
+              $ref: '../errors.yaml#/components/examples/notFound'
