--- a/resources/public/api/conf/1.0/endpoints/retrieve.yaml
+++ b/resources/public/api/conf/1.0/endpoints/retrieve.yaml
@@ -1,120 +1,121 @@
-summary: Retrieve business details
-description: |
-  This endpoint allows a developer to retrieve additional information for one of a user's business income source. The unique account reference (National Insurance number) must be provided as well as the unique business identifier.
-  
-  ### Test data
-  <p>Scenario simulations using <code>Gov-Test-Scenario</code> headers is only available in the sandbox environment.</p>
-  <table>
-      <thead>
-          <tr>
-              <th>Header Value (Gov-Test-Scenario)</th>
-              <th>Scenario</th>
-          </tr>
-      </thead>
-      <tbody>
-          <tr>
-              <td><p>N/A - DEFAULT</p></td>
-              <td>
-                  <p>Simulate a successful response with a self-employment business.</p>
-                  <p>Use the following businessId for this scenario:</p>
-                  <ul>
-                      <li><p>XAIS12345678901</p></li>
-                  </ul>
-              </td>
-          </tr>
-          <tr>
-              <td><p>PROPERTY</p></td>
-              <td><p>Simulate a successful response with a uk-property business.</p>
-              <p>Use the following businessId for this scenario:</p>
-              <ul>
-                <li><p>XAIS12345678902</p></li>
-              </ul>
-              </td>
-          </tr>
-          <tr>
-              <td><p>FOREIGN_PROPERTY</p></td>
-              <td><p>Simulate a successful response with a foreign-property business.</p>
-              <p>Use the following businessId for this scenario:</p>
-              <ul>
-                <li><p>XAIS12345678903</p></li>
-              </ul>
-              </td>
-          </tr>        
-          <tr>
-              <td><p>UNSPECIFIED</p></td>       
-              <td><p>Simulate a successful response with a property-unspecified business.</p>
-              <p>Use the following businessId for this scenario:</p>
-              <ul>
-                <li><p>XAIS12345678903</p></li>
-              </ul>
-              </td>        
-          </tr>
-          <tr>
-              <td><p>NOT_FOUND</p></td>
-              <td><p>Simulate a scenario where no data is found.</p></td>
-          </tr>
-      </tbody>
-  </table>
-tags:
-  - Retrieve Business Details
+get:
+  summary: Retrieve business details
+  description: |
+    This endpoint allows a developer to retrieve additional information for one of a user's business income source. The unique account reference (National Insurance number) must be provided as well as the unique business identifier.
+    
+    ### Test data
+    <p>Scenario simulations using <code>Gov-Test-Scenario</code> headers is only available in the sandbox environment.</p>
+    <table>
+        <thead>
+            <tr>
+                <th>Header Value (Gov-Test-Scenario)</th>
+                <th>Scenario</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td><p>N/A - DEFAULT</p></td>
+                <td>
+                    <p>Simulate a successful response with a self-employment business.</p>
+                    <p>Use the following businessId for this scenario:</p>
+                    <ul>
+                        <li><p>XAIS12345678901</p></li>
+                    </ul>
+                </td>
+            </tr>
+            <tr>
+                <td><p>PROPERTY</p></td>
+                <td><p>Simulate a successful response with a uk-property business.</p>
+                <p>Use the following businessId for this scenario:</p>
+                <ul>
+                  <li><p>XAIS12345678902</p></li>
+                </ul>
+                </td>
+            </tr>
+            <tr>
+                <td><p>FOREIGN_PROPERTY</p></td>
+                <td><p>Simulate a successful response with a foreign-property business.</p>
+                <p>Use the following businessId for this scenario:</p>
+                <ul>
+                  <li><p>XAIS12345678903</p></li>
+                </ul>
+                </td>
+            </tr>        
+            <tr>
+                <td><p>UNSPECIFIED</p></td>       
+                <td><p>Simulate a successful response with a property-unspecified business.</p>
+                <p>Use the following businessId for this scenario:</p>
+                <ul>
+                  <li><p>XAIS12345678903</p></li>
+                </ul>
+                </td>        
+            </tr>
+            <tr>
+                <td><p>NOT_FOUND</p></td>
+                <td><p>Simulate a scenario where no data is found.</p></td>
+            </tr>
+        </tbody>
+    </table>
+  tags:
+    - Retrieve Business Details
 
-parameters:
-  - $ref: '../pathParameters.yaml#/components/parameters/nino'
-  - $ref: '../pathParameters.yaml#/components/parameters/businessId'
-  - $ref: '../headers.yaml#/components/parameters/acceptJson'
-  - $ref: '../headers.yaml#/components/parameters/authorization'
-  - $ref: '../headers.yaml#/components/parameters/testScenarioHeader'
+  parameters:
+    - $ref: '../pathParameters.yaml#/components/parameters/nino'
+    - $ref: '../pathParameters.yaml#/components/parameters/businessId'
+    - $ref: '../headers.yaml#/components/parameters/acceptJson'
+    - $ref: '../headers.yaml#/components/parameters/authorization'
+    - $ref: '../headers.yaml#/components/parameters/testScenarioHeader'
 
-security:
-  - User-Restricted:
-      - read:self-assessment
+  security:
+    - User-Restricted:
+        - read:self-assessment
 
-responses:
-  "200":
-    description: Success
-    headers:
-      X-CorrelationId:
-        $ref: '../headers.yaml#/components/parameters/correlationId'
-    content:
-      application/json:
-        schema:
-          $ref: '../schemas/retrieveBusinessDetails/retrieve_business_details_response.json'
-        examples:
-          example-response:
-            description: Example Response
-            value:
-              $ref: '../examples/retrieveBusinessDetails/retrieve_business_details_response.json'
+  responses:
+    "200":
+      description: Success
+      headers:
+        X-CorrelationId:
+          $ref: '../headers.yaml#/components/parameters/correlationId'
+      content:
+        application/json:
+          schema:
+            $ref: '../schemas/retrieveBusinessDetails/retrieve_business_details_response.json'
+          examples:
+            example-response:
+              description: Example Response
+              value:
+                $ref: '../examples/retrieveBusinessDetails/retrieve_business_details_response.json'
 
-  "400":
-    description: Bad request
-    content:
-      application/json:
-        schema:
-          $ref: '../schemas/error-response.yaml'
-        examples:
-          FORMAT_NINO:
-            $ref: '../errors.yaml#/components/examples/formatNino'
-          FORMAT_BUSINESS_ID:
-            $ref: '../errors.yaml#/components/examples/formatBusinessId'
+    "400":
+      description: Bad request
+      content:
+        application/json:
+          schema:
+            $ref: '../schemas/error-response.yaml'
+          examples:
+            FORMAT_NINO:
+              $ref: '../errors.yaml#/components/examples/formatNino'
+            FORMAT_BUSINESS_ID:
+              $ref: '../errors.yaml#/components/examples/formatBusinessId'
 
-  "403":
-    description: Forbidden
-    content:
-      application/json:
-        schema:
-          $ref: '../schemas/error-response.yaml'
-        examples:
-          CLIENT_OR_AGENT_NOT_AUTHORISED:
-            $ref: '../errors.yaml#/components/examples/clientOrAgentNotAuthorised'
+    "403":
+      description: Forbidden
+      content:
+        application/json:
+          schema:
+            $ref: '../schemas/error-response.yaml'
+          examples:
+            CLIENT_OR_AGENT_NOT_AUTHORISED:
+              $ref: '../errors.yaml#/components/examples/clientOrAgentNotAuthorised'
 
-  "404":
-    description: Not Found
-    content:
-      application/json:
-        schema:
-          $ref: '../schemas/error-response.yaml'
-        examples:
-          MATCHING_RESOURCE_NOT_FOUND:
-            $ref: '../errors.yaml#/components/examples/notFound'
-          NO_BUSINESS_FOUND:
-            $ref: '../errors.yaml#/components/examples/notFoundBusiness'
+    "404":
+      description: Not Found
+      content:
+        application/json:
+          schema:
+            $ref: '../schemas/error-response.yaml'
+          examples:
+            MATCHING_RESOURCE_NOT_FOUND:
+              $ref: '../errors.yaml#/components/examples/notFound'
+            NO_BUSINESS_FOUND:
+              $ref: '../errors.yaml#/components/examples/notFoundBusiness'
