--- a/resources/public/api/conf/1.0/common/headers.yaml
+++ b/resources/public/api/conf/1.0/common/headers.yaml
@@ -15,7 +15,7 @@ components:
       name: "Authorization"
       in: header
       description: |
-        An OAuth 2.0 Bearer Token with the <b>write:self-assessment</b> or <b>read:self-assessment</b> scope.
+        An OAuth 2.0 Bearer Token with the *read:self-assessment* scope.
       schema:
         type: string
         example: Bearer bb7fed3fe10dd235a2ccda3d50fb
