--- a/resources/public/api/conf/1.0/list.yaml
+++ b/resources/public/api/conf/1.0/list.yaml
@@ -1,5 +1,5 @@
 get:
-  summary: List All Businesses
+  summary: <h1> List All Businesses </h1>
   description: |
     This endpoint allows a developer to retrieve all details of a user's business income sources. The unique account reference (National Insurance number) must be provided.
     
