--- a/resources/public/api/conf/1.0/retrieve.yaml
+++ b/resources/public/api/conf/1.0/retrieve.yaml
@@ -1,5 +1,5 @@
 get:
-  summary: Retrieve business details
+  summary: <h1> Retrieve business details </h1>
   description: |
     This endpoint allows a developer to retrieve additional information for one of a user's business income source. The unique account reference (National Insurance number) must be provided as well as the unique business identifier.
     
