Updated scala formatting

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -20,7 +20,7 @@ newlines.topLevelStatementBlankLines = [
   }
 ]
 
-spaces.inImportCurlyBraces: false
+spaces.inImportCurlyBraces: true
 
 style: defaultWithAlign
 
