--- a/resources/public/api/conf/1.0/list.yaml
+++ b/resources/public/api/conf/1.0/list.yaml
@@ -4,41 +4,16 @@ get:
     This endpoint allows a developer to retrieve all details of a user's business income sources. The unique account reference (National Insurance number) must be provided.
     
     ### Test data
-    <p>Scenario simulations using <code>Gov-Test-Scenario</code> headers is only available in the sandbox environment.</p>
-    <table>
-        <thead>
-            <tr>
-                <th>Header Value (Gov-Test-Scenario)</th>
-                <th>Scenario</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td><p>N/A - DEFAULT</p></td>
-                <td><p>Simulate a successful response with a self-employment business.</p></td>
-            </tr>
-            <tr>
-                <td><p>PROPERTY</p></td>
-                <td><p>Simulate a successful response with a uk-property business.</p></td>
-            </tr>
-            <tr>
-              <td><p>FOREIGN_PROPERTY</p></td>
-              <td><p>Simulate a successful response with a foreign-property business.</p></td>
-            </tr>
-            <tr>
-              <td><p>BUSINESS_AND_PROPERTY</p></td>
-              <td><p>Simulate a successful response with a self-employment, uk-property and foreign-property business.</p></td>
-            </tr>
-            <tr>
-              <td><p>UNSPECIFIED</p></td>
-              <td><p>Simulate a successful response with a property-unspecified business.</p></td>
-            </tr> 
-            <tr>
-              <td><p>NOT_FOUND</p></td>
-              <td><p>Simulates the scenario where no data is found.</p></td>
-            </tr>
-        </tbody>
-    </table>
+    Scenario simulation using Gov-Test-Scenario headers is only available in the sandbox environment.    
+    
+    | Header Value (Gov-Test-Scenario) | Scenario                                                                                         |
+    |----------------------------------|--------------------------------------------------------------------------------------------------|
+    | N/A - DEFAULT                    | Simulate a successful response with a self-employment business.                                  |
+    | PROPERTY                         | Simulate a successful response with a uk-property business.                                      |
+    | FOREIGN_PROPERTY                 | Simulate a successful response with a foreign-property business.                                 |                                                                |
+    | BUSINESS_AND_PROPERTY            | Simulate a successful response with a self-employment, uk-property and foreign-property business.|
+    | UNSPECIFIED                      | Simulate a successful response with a property-unspecified business.                             |
+    | NOT_FOUND                        | Simulates the scenario where no data is found.                                                   |
 
   parameters:
     - $ref: './common/pathParameters.yaml#/components/parameters/nino'
