MTDSA-17058: Adding RuleIncorrectGovTestScenario to endpoints OAS

--- a/resources/public/api/conf/1.0/list.yaml
+++ b/resources/public/api/conf/1.0/list.yaml
@@ -50,6 +50,8 @@ get:
           examples:
             FORMAT_NINO:
               $ref: './common/errors.yaml#/components/examples/formatNino'
+            RULE_INCORRECT_GOV_TEST_SCENARIO:
+              $ref: './common/errors.yaml#/components/examples/ruleIncorrectGovTestScenario'
 
     "403":
       description: Forbidden
