--- a/resources/public/api/conf/1.0/common/errors.yaml
+++ b/resources/public/api/conf/1.0/common/errors.yaml
@@ -17,6 +17,14 @@ components:
         code: FORMAT_BUSINESS_ID
         message: The provided Business ID is invalid
 
+    ruleIncorrectGovTestScenario:
+      description: |
+        The request did not match any available Sandbox data. Check that the supplied Gov-Test-Scenario is correct for 
+        this endpoint version. This error will only be returned in the Sandbox environment.
+      value:
+        code: RULE_INCORRECT_GOV_TEST_SCENARIO
+        message: The Gov-Test-Scenario was not found
+
     # 403
 
     clientOrAgentNotAuthorised:
