--- a/resources/public/api/conf/1.0/retrieve.yaml
+++ b/resources/public/api/conf/1.0/retrieve.yaml
@@ -54,6 +54,8 @@ get:
               $ref: './common/errors.yaml#/components/examples/formatNino'
             FORMAT_BUSINESS_ID:
               $ref: './common/errors.yaml#/components/examples/formatBusinessId'
+            RULE_INCORRECT_GOV_TEST_SCENARIO:
+              $ref: './common/errors.yaml#/components/examples/ruleIncorrectGovTestScenario'
 
     "403":
       description: Forbidden
