MTDSA-18108 added feature switch

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -113,6 +113,13 @@ metrics {
   enabled = true
 }
 
+# Feature switches
+feature-switch {
+  r10-fields {
+    enabled = false
+  }
+}
+
 # Microservice specific config
 
 auditing {
