Update the config to enable feature swtiches

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -116,7 +116,7 @@ metrics {
 # Feature switches
 feature-switch {
   r10-fields {
-    enabled = false
+    enabled = true
   }
   r10-IFS {
     enabled = true
