--- a/conf/application.conf
+++ b/conf/application.conf
@@ -88,6 +88,7 @@ api {
   1.0 {
     status = "BETA"
     endpoints.enabled = true
+    endpoints.api-released-in-production = true
   }
 
   confidence-level-check {
@@ -117,9 +118,11 @@ metrics {
 feature-switch {
   r10-fields {
     enabled = true
+    releasedInProduction = false
   }
   r10-IFS {
     enabled = true
+    releasedInProduction = true
   }
 }
 
