--- a/conf/application.conf
+++ b/conf/application.conf
@@ -89,6 +89,13 @@ api {
     status = "BETA"
     endpoints.enabled = true
     endpoints.api-released-in-production = true
+      switches {
+            retrieve_business_details_with_additional_fields = {
+                enabled = true
+                fields = [ "latencyDetails" ]  // optional
+                released = false  // optional, default to true
+            }
+        }
   }
 
   confidence-level-check {
@@ -122,7 +129,7 @@ feature-switch {
   }
   r10-IFS {
     enabled = true
-    releasedInProduction = true
+    releasedInProduction = false
   }
 }
 
