Added OAS feature switch for r10-fields

--- a/resources/public/api/conf/1.0/retrieve.yaml
+++ b/resources/public/api/conf/1.0/retrieve.yaml
@@ -36,21 +36,12 @@ get:
       content:
         application/json:
           schema:
-            {{#if (enabled "r10-fields" )}}
-            $ref: ./schemas/retrieveBusinessDetails/retrieve_business_details_response_with_additional_fields.json
-            {{else}}
-            $ref: ./schemas/retrieveBusinessDetails/retrieve_business_details_response.json
-            {{/if}}
+            $ref: './schemas/retrieveBusinessDetails/retrieve_business_details_response_with_additional_fields.json'
           examples:
             example-response:
               description: Example Response
               value:
-                {{#if (enabled "r10-fields")}}
                 $ref: ./examples/retrieveBusinessDetails/retrieve_business_details_response_with_additional_fields.json
-                {{else}}
-                $ref: ./examples/retrieveBusinessDetails/retrieve_business_details_response.json
-                {{/if}}
-
     "400":
       description: Bad request
       content:
