--- a/conf/application.conf
+++ b/conf/application.conf
@@ -87,15 +87,10 @@ api {
   # The status of the version of the API for the API Platform.
   1.0 {
     status = "BETA"
-    endpoints.enabled = true
-    endpoints.api-released-in-production = true
-      switches {
-            retrieve_business_details_with_additional_fields = {
-                enabled = true
-                fields = [ "latencyDetails" ]  // optional
-                released = false  // optional, default to true
-            }
-        }
+    endpoints {
+        enabled = true
+        api-released-in-production = true
+    }
   }
 
   confidence-level-check {
@@ -129,7 +124,7 @@ feature-switch {
   }
   r10-IFS {
     enabled = true
-    releasedInProduction = false
+    releasedInProduction = true
   }
 }
 
