--- a/conf/application.conf
+++ b/conf/application.conf
@@ -120,7 +120,7 @@ metrics {
 feature-switch {
   r10-fields {
     enabled = true
-    releasedInProduction = false
+    released-in-production = false
   }
   r10-IFS {
     enabled = true
