MTDSA-18365b: Updated feature switch naming in application.conf and relevant files

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -115,10 +115,10 @@ metrics {
 
 # Feature switches
 feature-switch {
-  r10-fields {
+  retrieveAdditionalFields {
     enabled = true
   }
-  r10-IFS {
+  ifs {
     enabled = true
   }
 }
