Updated released-in-production flag

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -124,7 +124,7 @@ feature-switch {
   }
   r10-IFS {
     enabled = true
-    releasedInProduction = true
+    released-in-production = true
   }
 }
 
