MTDSA-18365: small change in ConnectorSpec

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -120,7 +120,7 @@ metrics {
 feature-switch {
   retrieveAdditionalFields {
     enabled = true
-    released-in-production = false
+    released-in-production = true
   }
   ifs {
     enabled = true
