MTDSA-18365: Updated application.conf

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -120,11 +120,11 @@ metrics {
 feature-switch {
   retrieveAdditionalFields {
     enabled = true
-    released-in-production = true
+    released-in-production = false
   }
   ifs {
     enabled = true
-    released-in-production = true
+    released-in-production = false
   }
 }
 
