--- a/resources/public/api/conf/1.0/list.yaml
+++ b/resources/public/api/conf/1.0/list.yaml
@@ -1,7 +1,8 @@
 get:
   summary: List All Businesses
   description: |
-    This endpoint allows a developer to retrieve all details of a user's business income sources. The unique account reference (National Insurance number) must be provided.
+    This endpoint allows a developer to retrieve all details of a user's business income sources. The unique account 
+    reference (National Insurance number) must be provided.
     
     ### Test data
     Scenario simulation using Gov-Test-Scenario headers is only available in the sandbox environment.    
@@ -14,6 +15,7 @@ get:
     | BUSINESS_AND_PROPERTY            | Simulate a successful response with a self-employment, uk-property and foreign-property business.|
     | UNSPECIFIED                      | Simulate a successful response with a property-unspecified business.                             |
     | NOT_FOUND                        | Simulates the scenario where no data is found.                                                   |
+    | STATEFUL                         | Performs a stateful list.                                                                        |
 
   parameters:
     - $ref: './common/pathParameters.yaml#/components/parameters/nino'
