MTDSA-20368: Create Feature Switch (#132)
* MTDSA-20368: Create Feature Switch

* MTDSA-20368: Added comment to application.conf

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -116,7 +116,8 @@ metrics {
   enabled = true
 }
 
-# Feature switches
+# Feature Switches
+# `released-in-production` setting is only used in ET and shouldn't be in the production config
 feature-switch {
   retrieveAdditionalFields {
     enabled = true
@@ -125,6 +126,11 @@ feature-switch {
   ifs {
     enabled = true
     released-in-production = false
+  }
+
+  endpoint-2089 {
+     enabled = true
+     released-in-production = false
   }
 }
 
